--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,6 +1,6 @@
 
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Wuming Fu's Homepage
+page-top-title: Wuming Fu
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023. All Rights Reserved.'
+home-subtitle: Wuming Fu&ensp;|&ensp;富无名
+copyright-text: '&copy; Wuming Fu 2023. All Rights Reserved.'
